--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,141 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
 
-    <div class="main">
-        <div class="main__elem">Hello Evginy! 1111</div>
-        <a href="contacts.html">Contacts</a>
-        <img src="images/icons/html.jpg" alt="">
-    </div>
+	<main class="main">
+		<header class="header">
+			<div class="header__body container">
+				<div class="header__logo">
+					<img src="../dist/images/logo.svg" alt="" class="img">
+				</div>
+				<div class="header__burger">
+					<span class="header__drawing"></span>
+				</div>
+				<div class="header__user">
+					<a href="" class="header__link">Войти</a>
+					<div class="header__button">
+						<a href="" class="header__bth">Зарегистрироваться</a>
+					</div>
+					<nav class="header__menu">
+						<ul class="header__list">
+							<li class="header__li">
+								<a href="" class="header__li-link">Преимущества</a>
+							</li>
+							<li class="header__li">
+								<a href="" class="header__li-link">Форматы</a>
+							</li>
+							<li class="header__li">
+								<a href="" class="header__li-link">Запуск</a>
+							</li>
+							<li class="header__li">
+								<a href="" class="header__li-link">Площадки</a>
+							</li>
+							<li class="header__li">
+								<a href="" class="header__li-link">Фулл-сервис</a>
+							</li>
+						</ul>
+						<div class="header__info">
+							<div class="header__public">
+								<a href="#" class="header__public-img">
+									<img src="../dist/images/icons/insta.svg" alt="" class="img">
+								</a>
+								<a href="#" class="header__public-img">
+									<img src="../dist/images/icons/twiter.svg" alt="" class="img">
+								</a>
+								<a href="#" class="header__public-img">
+									<img src="../dist/images/icons/facebook.svg" alt="" class="img">
+								</a>
+							</div>
+							<a class="header__info-text" href="">Юридическая информация</a>
+							<a class="header__info-text" href="">Справочная информация</a>
+						</div>
+					</nav>
+				</div>
+			</div>
+		</header>
+		<div class="screen">
+			<div class="screen__bg screen__bg_front"></div>
+			<div class="screen__bg screen__bg_back"></div>
+			<div class="screen__body">
+				<div class="screen__container container">
+					<div class="screen__info">
+						<div class="screen__text">
+							<span>Рекламируйте товары и услуги, продвигайте приложения, привлекайте новую аудиторию на свой
+								сайт.
+								Три
+								тысячи площадок.</span>
+							<span class="screen__text-el">Запуск в два клика. Бюджет от 10 000 рублей.</span>
+						</div>
+						<button class="screen__bth">Начать работу</button>
+						<a href="" class="screen__info-link">Посмотреть как работает реклама</a>
+					</div>
+					<div class="screen__img">
+						<img class="screen__picture img" src="images/bitmap.jpg" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="screen__scroll">
+				<div class="screen__scroll-img">
+					<img class="img" src="../dist/images/icons/scroll.svg" alt="">
+				</div>
+				<div class="screen__scroll-text">scroll</div>
+			</div>
+
+
+		</div>
+		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam quae cupiditate consequuntur dolore eum
+			porro mollitia adipisci consectetur accusantium tenetur atque aperiam unde debitis ipsum explicabo, alias sit
+			esse, quibusdam ab aspernatur ipsam delectus deleniti! Neque beatae quisquam eveniet, sed officia repudiandae
+			quas natus voluptatum, dolorum aspernatur, quam deleniti reiciendis eligendi ratione dolore unde voluptatibus
+			voluptate vel. Iure, amet harum, quo officiis rem dolorum eius perferendis aspernatur natus nostrum
+			exercitationem labore ipsum libero, doloribus quasi tempora incidunt praesentium? Explicabo illum saepe velit
+			tempore nobis doloribus quos obcaecati blanditiis sed quia a minima facere soluta unde magnam nesciunt, aut
+			quas ea ipsum officiis labore distinctio reiciendis aperiam? Vel corporis, cumque dolore nam nulla consectetur
+			obcaecati? Ipsa sapiente voluptatibus obcaecati aliquid quasi natus, facilis nam, porro fugit tempore nostrum
+			dolorum debitis a voluptas accusantium architecto modi cumque, eligendi magnam vel. Inventore accusamus
+			dolores, voluptatum quisquam, neque magni recusandae cumque facilis ullam natus deserunt delectus. Facilis quo
+			aut asperiores architecto, cumque officiis voluptate iure quisquam consectetur voluptas quia quam explicabo.
+			Minima mollitia est ipsam, reprehenderit repellat distinctio ipsa enim consectetur magnam quam animi delectus.
+			Cumque dolore necessitatibus, velit ex eveniet quis magnam asperiores omnis quo delectus provident? Aliquid eos
+			debitis perspiciatis nihil iste culpa nesciunt laborum reiciendis sequi, libero ad eius id earum voluptatem
+			eaque! Neque repellat tempora aut dicta debitis ipsam perferendis adipisci voluptate, labore quidem minus
+			magnam non molestias. Odio at suscipit rerum repudiandae, perspiciatis numquam. In architecto consectetur
+			aperiam eligendi illo distinctio commodi veritatis ea, amet ipsam non asperiores necessitatibus expedita natus
+			tempore sapiente voluptatum quas fugit ipsa iure minima sed unde perferendis quia. Eaque dolorum laborum nam
+			veritatis cum enim natus minus temporibus repudiandae ut, commodi eligendi consectetur quam. Rem soluta hic
+			iure, perspiciatis sunt suscipit ducimus est eum recusandae temporibus officia, cum sed reiciendis quibusdam
+			optio. Harum saepe voluptate repudiandae optio numquam quam atque iure dolore consequuntur odit! Excepturi,
+			temporibus at ab eum perspiciatis dignissimos, eaque vitae eligendi placeat, totam officiis corporis! Esse
+			libero aut, incidunt suscipit in maiores eos tempore asperiores eaque impedit delectus obcaecati ratione
+			reprehenderit dolores. Corporis, exercitationem, assumenda maiores repellendus quis molestias placeat officiis
+			ratione nostrum possimus quasi ipsa repellat? Neque, hic ad necessitatibus, cupiditate nam saepe nemo excepturi
+			suscipit beatae quidem quo eum facilis explicabo aut optio asperiores natus totam sed dolorum dolore atque
+			molestiae laudantium eos! Rerum repudiandae, mollitia eius assumenda dignissimos, fuga et illum provident
+			ducimus delectus explicabo vero tempore adipisci optio doloribus aliquid nemo nihil a ipsam iusto eum cumque ut
+			molestiae illo. Corrupti ea at officiis vitae labore placeat vero esse asperiores expedita, et sequi fuga quia
+			possimus nostrum numquam? Ab alias corrupti dignissimos quibusdam eos, dolores exercitationem aspernatur
+			deleniti itaque, perferendis iusto rem voluptatem, harum repudiandae adipisci laudantium dicta quam aperiam
+			quia? Accusantium, debitis eum qui repellendus eos at accusamus dolorum similique deserunt a minima laboriosam
+			voluptatum reiciendis. Ducimus eveniet sequi delectus earum ea quo provident officiis obcaecati a minima! Ad
+			nostrum saepe aperiam explicabo molestiae harum aliquid natus, dolorum consectetur, nihil sequi recusandae qui
+			sed earum optio.</p>
+	</main>
+
+
+
+
+
+
+
+
+
 
 </body>
 
