menu burger jquery

--- a/src/index.html
+++ b/src/index.html
@@ -88,8 +88,6 @@
 				</div>
 				<div class="screen__scroll-text">scroll</div>
 			</div>
-
-
 		</div>
 		<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam quae cupiditate consequuntur dolore eum
 			porro mollitia adipisci consectetur accusantium tenetur atque aperiam unde debitis ipsum explicabo, alias sit
@@ -128,16 +126,8 @@
 			nostrum saepe aperiam explicabo molestiae harum aliquid natus, dolorum consectetur, nihil sequi recusandae qui
 			sed earum optio.</p>
 	</main>
-
-
-
-
-
-
-
-
-
-
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"> </script>
+	<script src="scripts/main.js"></script>
 </body>
 
 </html>
